# otto-trans

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
otto-trans-java/: README.md  dependency-reduced-pom.xml  pom.xml
otto-trans-java/src/main/java/kg/us/xuan/otto_trans/: Main.java
otto-trans-java/src/main/java/kg/us/xuan/otto_trans/config/: Settings.java
otto-trans-java/src/main/java/kg/us/xuan/otto_trans/core/: Cache.java  Translator.java
otto-trans-java/src/main/java/kg/us/xuan/otto_trans/engine/: BaseTranslator.java  DeepLTranslator.java  LanguagePair.java  OptionMeta.java  UnsupportedLanguageError.java
otto-trans-java/src/test/java/kg/us/xuan/otto_trans/config/: SettingsTest.java
otto-trans-java/src/test/java/kg/us/xuan/otto_trans/core/: CacheTest.java  TranslatorTest.java
src/otto_trans/: cli.py
src/otto_trans/adapter/: __init__.py  base.py  srt.py
src/otto_trans/config/: settings.py
src/otto_trans/converter/: __init__.py  base.py  html_to_markdown.py  markdown_to_html.py
src/otto_trans/core/: __init__.py  cache.py  translator.py
src/otto_trans/engine/: __init__.py  base.py  deepl.py  openai.py  youdao.py
src/otto_trans/formatter/: __init__.py  base.py
src/otto_trans/utils/: __init__.py  format.py  html.py  text.py
templates/adapter_plugin/: pyproject.toml
templates/adapter_plugin/src/adapter_plugin/: __init__.py  adapter_plugin.py
templates/converter_plugin/: pyproject.toml
templates/converter_plugin/src/converter_plugin/: __init__.py  converter_plugin.py
templates/engine_plugin/: pyproject.toml
templates/engine_plugin/src/engine_plugin/: __init__.py  engine_plugin.py
tests/: test_cache.py  test_cli.py  test_converters.py  test_deepl.py  test_engine_request.py  test_openai.py  test_openai_supports_format.py  test_settings.py  test_srt_adapter.py  test_translator.py  test_youdao.py  test_youdao_web.py
