[project]
name = "otto-trans"
version = "0.1.4"
description = "多引擎命令行翻译工具，支持有道、OpenAI 兼容接口和 DeepL 三种翻译后端。"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "typer>=0.25.1",
]

[project.scripts]
otto = "otto_trans.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "pytest-mock>=3.15.1",
]
