[project]
name = "otto-trans"
dynamic = ["version"]
description = "多引擎命令行翻译工具，支持有道、OpenAI 兼容接口和 DeepL 三种翻译后端。"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "轩哥有内涵" },
]
urls = { Repository = "https://github.com/xuangeyouneihan/otto-trans" }
dependencies = [
    "chardet>=5.2.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mistune>=3.2.1",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "typer>=0.25.1",
]

[project.scripts]
otto = "otto_trans.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/otto_trans"]

[tool.hatch.build.targets.wheel.force-include]
"src/otto_trans/py.typed" = "otto_trans/py.typed"

[tool.hatch.build.targets.wheel.exclude]
"template" = "template"
"otto-trans-java" = "otto-trans-java"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "types-PyYAML>=6.0.12.20250318",
]
